--- a/app/views/mio_profilo/account.html.erb
+++ b/app/views/mio_profilo/account.html.erb
@@ -452,7 +452,7 @@
             }
         });
 
-    }); //end hquery document ready
+    }); //end query document ready
 
     function isValidEmailAddress(emailAddress) {
         var pattern = new RegExp(/^\b[A-Z0-9._%-]+@[A-Z0-9.-]+\.[A-Z]{2,4}\b$/i);
