--- a/app/views/newsletters/_users_newsletter_emailed.erb
+++ b/app/views/newsletters/_users_newsletter_emailed.erb
@@ -12,16 +12,16 @@
     <tbody>
     <%#.sort_by(&:sended) undefined method `<=>' for false:FalseClass %>
     <% @nl_users.each do |nl_usr| %>
-        <tr id="nl_usr-<%= nl_usr.id %>" class="nl_usr">
+        <tr id="nl_usr-<%= nl_usr.id %>" class="user">
           <td>
             <div style="width:1px;" class="flash <%= nl_usr.sended? ? 'notice' : (nl_usr.errore.nil? ? 'warning' : 'error') %>" title="<%= nl_usr.errore.nil? ? '' : nl_usr.errore %>">&nbsp;</div>
           </td>
           <td>
-            <%= link_to_nl_usr(nl_usr.nl_usr, {:target => "_blank", :class => 'icon icon-preview'}) unless User.current.admin? %>
-            <%= link_to(h(nl_usr.nl_usr.name), edit_nl_usr_path(:id => nl_usr.nl_usr), {:target => "_blank", :class => 'icon icon-preview'}) unless !User.current.admin? %><br /><%= ("(" + format_date(nl_usr.data_scadenza) + ")") unless nl_usr.data_scadenza.nil? %>
+            <%= link_to_user(nl_usr.user, {:target => "_blank", :class => 'icon icon-preview'}) unless User.current.admin? %>
+            <%= link_to(h(nl_usr.user.name), edit_user_path(:id => nl_usr.user), {:target => "_blank", :class => 'icon icon-preview'}) unless !User.current.admin? %><br /><%= ("(" + format_date(nl_usr.user.scadenza) + ")") unless nl_usr.user.scadenza.nil? %>
           </td>
           <td class="ico" align="left">
-            <%= nl_usr_role_iconized(nil, :size => 'l', :icon_for => get_role_css(nl_usr.nl_usr.role_id), :text => '') %>
+            <%= user_role_iconized(nil, :size => 'l', :icon_for => get_role_css(nl_usr.user.role_id), :text => '') %>
           </td>
           <td>
             <%= link_to(h(nl_usr.convention), convention_path(:id => nl_usr.convention), {:target => "_blank", :class => 'icon icon-preview'}) unless nl_usr.have_convention? %>
