--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,24 +32,26 @@
 <%= call_hook :view_account_left_bottom, :user => @user %>
 
 
-<h3><%=l(:label_newsletters)%></h3>
-  <%# newsletters = NewsletterUser.per_user(@user.id) %>
-  <% newsletters = NewsletterUser.scoped_by_user_id(@user.id) %>
-  <% if newsletters.any? && (newsletters.count > 1)%>
-    <%= l(:label_total) %>:<strong class="total center"><%= h(newsletters.count - 1) %></strong>
+<h3><%=l(:newsletter_user)%></h3>
+  <%# nl_user = NewsletterUser.per_user(@user.id) %>
+  <% nl_user = NewsletterUser.scoped_by_user_id(@user.id) %>
+  <% if nl_user.any? && (nl_user.count > 1)%>
+    <%= l(:label_total) %>:<strong class="total center"><%= h(nl_user.count) %></strong>
     <table class="subtable list invii" width="100%">
       <tr>
         <th style="width:40%; text-align:left;"><%= l(:label_data) %></th>
         <th style="width:40%; text-align:left;"><%= l(:label_project) %></th>
         <th style="width:20%; text-align:left;"></th>
       </tr>
-      <% newsletters.each do |invio| %>
+      <% nl_user.each do |invio| %>
         <tr>
-          <td><%= format_date(invio.data) %></td>
-          <td class="buttons">
-              <%= link_to(h(invio.project.name), project_path(invio.project), :class => 'icon icon-globe icon-adjust-min') if invio.have_project? %>
+          <td><%= format_date(invio.updated_at) %></td>
+          <td>
+              <%= link_to(h(invio.newsletter.project.name), project_path(invio.newsletter.project), :class => 'icon icon-globe icon-adjust-min') if invio.have_project? %>
           </td>
-          <td><%= check_box_tag '', 1, invio.sended, :disabled => 'disabled'  %></td>
+          <td title="<%= invio.errore %>">
+            <%= check_box_tag '', 1, invio.sended, :disabled => 'disabled'  %>
+          </td>
         </tr>
       <% end %>
     </table>
