control newsletter exist

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,7 +3,7 @@
     <%= link_to l(:label_subproject_new), {:controller => 'projects', :action => 'new', :parent_id => @project}, :class => 'icon icon-add' %>
     <%= link_to(l(:button_send_newsletter), newsletter_invii_path(:project_id => @project.id), :class => 'icon icon-newsletter') if User.current.admin? && @project.is_public_fs? %>
 
-    <%= link_to(l(:button_send_emails, :jobs => @project.newsletter.emails_pending), newsletter_massmailer_path(@project.newsletter.id), :class => 'icon icon-mails-to-send' ) if (User.current.admin? && @project.newsletter.have_emails_to_send?) %>
+    <%= link_to(l(:button_send_emails, :jobs => @project.newsletter.emails_pending), newsletter_massmailer_path(@project.newsletter.id), :class => 'icon icon-mails-to-send' ) if (User.current.admin? && @project.newsletter && @project.newsletter.have_emails_to_send?) %>
   <% end %>
 </div>
 
