--- a/app/views/editorial/_tramenu_logged.html.erb
+++ b/app/views/editorial/_tramenu_logged.html.erb
@@ -1,6 +1,6 @@
-<p class="fs-tramenu-blockheader x-granata">TEAmArtist</p>
+<p class="fs-tramenu-blockheader x-granata"> Fiscosport s.r.l.</p>
 <div class="fs-blockcontent fs-tramenu1-logged">
-  <% if  banners_tramenu.count > 0 %>
+  <% if banners_tramenu.count > 0 %>
       <ul id="carousel_tramenu_js">
         <% banners_tramenu.each do |i| %>
             <% if  i.url.nil? %>
