--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,34 +1,66 @@
 <html>
 <head>
 <style>
-body {
-  font-family: Verdana, sans-serif;
-  font-size: 0.8em;
-  color:#484848;
-}
-h1, h2, h3 { font-family: "Trebuchet MS", Verdana, sans-serif; margin: 0px; }
-h1 { font-size: 1.2em; }
-h2, h3 { font-size: 1.1em; }
-a, a:link, a:visited { color: #2A5685;}
-a:hover, a:active { color: #c61a1a; }
-a.wiki-anchor { display: none; }
-hr {
-  width: 100%;
-  height: 1px;
-  background: #ccc;
-  border: 0;
-}
-.footer {
-  font-size: 0.8em;
-  font-style: italic;
-}
+body, .strat { font-family: "Segoe UI", Arial, Helvetica, sans-serif; font-size: 14px; color: #000; background-color: #EBA800; }
+.font {font-family: "Segoe UI", Arial, Helvetica, sans-serif; }
+p {margin-top: 5px;margin-bottom: 10px;}
+a, a:link { color: #1AC2FF; text-decoration: none; }
+a:visited { color: #1AC2FF; text-decoration: none; }
+a:hover { color: #8C8C8C; text-decoration: underline; }
+img { border: none; margin: 0; }
 </style>
 </head>
 <body>
-<span class="header"><%= Setting.emails_header %></span>
-<%= yield %>
-<hr />
-<span class="footer"><%= Setting.emails_footer %></span>
-Mail from html
+<div class="strat">
+<table bgcolor="#EBA800" align="center" width="600" cellpadding="2" cellspacing="2">
+<tr><td ><font face="Segoe UI, Arial, Helvetica, sans-serif" size="1" color="#016284"><a target="_blank" href="<%= editorial_url %>" >Vai al sito <%= Setting.app_title %></a></font></td>
+</tr></table>
+<table bgcolor="#FFFFFF" align="center" width="600" style="border: #666666 1px solid;" cellpadding="0" cellspacing="0">
+  <tr>
+    <td bgcolor="#efefef" style="border-bottom: #666666 1px solid;" ><br>
+      <TABLE border="0" align="center">
+        <TR>
+          <TD style="color:	#016284"><%# link_to(image_tag("/images/template/object1688855322.png"), url_for(:controller => 'editorial', :action => "home", :escape => false)) %><img src="<%= auto_link(@fee_img) %>"" alt="" border="0"><h2><%= Setting.welcome_text_fs %></h2>
+          </TD>
+        </TR>
+      </TABLE>
+      <br>
+    </td>
+  </tr>
+  <tr>
+    <td><TABLE width="510" border="0" cellpadding="0" cellspacing="0" align="center">
+        <TR>
+          <TD><%= Setting.emails_header %></TD>
+        </TR>
+        <TR>
+          <TD>
+            <p style="font-family: "Segoe UI", arial,  helvetica, sans-serif;font-size: 25px;color: #016284;">&nbsp;<br><h3><%= @title %></h3></p><br>
+            <p style="font-family: "Segoe UI", arial,  helvetica, sans-serif;font-size: 16px;color: ##016285;">&nbsp;</p>
+            <p style="font-family: "Segoe UI", arial,  helvetica, sans-serif;font-size: 14px;color: #666666;">
+            <%= yield %>
+            </p>
+            <table width="200" align="right" border="0" cellspacing="5" cellpadding="5">
+              <tr>
+                <td><a href="#"><img src="images/fwd.gif" border="0" /></a></td>
+                <td><a href="#"><img src="images/sub.gif" border="0" /></a></td>
+              </tr>
+            </table>
+            <br>
+            <p style="font-family: "Segoe UI", arial,  helvetica, sans-serif;font-size: 15px;color: #666666;">&nbsp;<%# Subtitle 02%></p>
+            <p style="font-family: "Segoe UI", arial,  helvetica, sans-serif;font-size: 12px;color: #666666;">&nbsp;<%# content 02%></p>
+            <table width="100%" align="center" cellpadding="5" cellspacing="5" style="border: #666666 1px solid;">
+              <tr>
+                <td width="2%"><img src="images/person.gif"></td>
+                <td width="98%"><p style="font-family: "Segoe UI", arial,  helvetica, sans-serif;font-size: 12px;color: #666666;"><a target="_blank" href="<%= editorial_url %>" >Vai a <%= Setting.app_title %> </a><%# auto_link(editorial_url) %></p></td>
+              </tr>
+            </table>
+            <br>
+            <font face="Verdana, Arial, Helvetica, sans-serif" color="#666666" size="1"><%= Setting.emails_footer %><br /></font><br><br> </TD>
+        </TR>
+      </TABLE>
+</table>
+<table bgcolor="#EBA800" align="center" width="600" cellpadding="2" cellspacing="2">
+<tr><td><font face="Segoe UI, Arial, Helvetica, sans-serif" size="1" color="#016284">&nbsp;</font></td></tr></table>
+</div>
 </body>
 </html>
