--- a/app/views/account/prova.html.erb
+++ b/app/views/account/prova.html.erb
@@ -47,13 +47,13 @@
     <div id="fs-prova-gratis-info">
       <div class="fs-prova-gratis-info">
         <label class="fs-checkbox">
-          <input type="checkbox" id="modlgn_remember" name="team_artist" value="yes" alt="Team Artist" checked="true"/>
+          <input type="checkbox" id="modlgn_remember" name="merce_dolci" value="yes" alt="Merce dolci" checked="true"/>
         </label>
         <ul id="tickGratis" class="fs-prova-gratis-righe">
-          <li>Prova anche la demo di <a href="http://teamartist.com" target="_blank">Team Artist</a></li>
+          <li>Prova anche la demo di <a href="http://www.mercidolci.it/" target="_blank">Merce dolci</a></li>
           <li> il software per le nostre associazioni. </li>
           <li>Promo: se ti iscrivi a FiscoSport...  </li>
-           <li>-10% sul listino approfittane ora! <a href="http://teamartist.com" target="_blank">Scopri...</a></li>
+           <li>-10% sul listino approfittane ora! <a href="http://www.mercidolci.it/" target="_blank">Scopri...</a></li>
         </ul>
         <div class="clearfix"></div>
          <span title="Cliccando su '<%= l(:button_prova)%>' acconsenti esplicitamente al trattamento dei dati personali ai sensi del D.Lgs. 196/2003" >Cliccando su "<%= l(:button_prova)%>" acconsenti al <a href='#' id='ainf_prova' class='pri'><b>trattamento dati</b></a>
