--- a/app/views/editorial/_edizione_smtp.html.erb
+++ b/app/views/editorial/_edizione_smtp.html.erb
@@ -67,7 +67,7 @@ table td {padding: 0; margin: 0; border: none;}
                       <% if @user %>
                         <%= @user.firstname %> &nbsp; <%= @user.lastname %>
                       <% else %>
-                        @@user_name@@
+                        @@user_username@@
                       <% end %>
                     </font>
                 </td>
