--- a/app/views/layouts/svcmailer.html.erb
+++ b/app/views/layouts/svcmailer.html.erb
@@ -15,6 +15,7 @@
   <%= stylesheet_link_tag 'rtl', :media => 'all' if l(:direction) == 'rtl' %>
   <%= stylesheet_link_tag 'editorial', :media => 'print' %>
   <!--   styles per il Front End  -->
+  <%= stylesheet_link_tag 'application.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.responsive.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.plus.css', :media => 'all' %>
