--- a/app/views/conventions/_form.html.erb
+++ b/app/views/conventions/_form.html.erb
@@ -2,7 +2,7 @@
 <div class="box tabular" xmlns="http://www.w3.org/1999/html">
   <h3><%= l(:label_abbo) %></h3>
 
-  <p><%= f.select :user_id, (User.all.collect { |c| [c.lastname + ' ' + c.firstname + ' (' + c.login + ')', c.id] }), :include_blank => false, :required => true, :size => 60, :title => l(:label_manager) %></p>
+  <p><%= f.select :user_id, (User.all(:order => 'lastname').collect { |c| [c.lastname + ' ' + c.firstname + ' (' + c.login + ')', c.id] }), :include_blank => true, :required => false, :size => 60, :title => l(:label_manager) %></p>
 
   <p><%= f.check_box :richiedinumeroregistrazione, :label => :label_richiedinumeroregistrazione %></p>
 
@@ -32,9 +32,9 @@
   <% end %>
   <p><%= f.select :cross_organization_id, (CrossOrganization.all.collect { |c| [c.name, c.id] }), :include_blank => false, :required => true, :size => 60, :title => l(:label_cross_organization) %></p>
 
-  <p><%= f.select :region_id, (Region.all.collect { |c| [c.name, c.id] }), :include_blank => false, :required => true, :size => 60, :title => l(:label_region) %></p>
+  <p><%= f.select :region_id, (Region.all(:order => 'name').collect { |c| [c.name, c.id] }), :include_blank => true, :required => false, :size => 60, :title => l(:label_region) %></p>
 
-  <p><%= f.select :province_id, (Province.all.collect { |c| [c.name + ' (' + c.sigla + ')', c.id] }), :include_blank => false, :required => true, :size => 60, :title => l(:label_province) %></p>
+  <p><%= f.select :province_id, (Province.all( :include => [:region], :order => 'name').collect { |c| [c.name + ' (' + c.sigla + ')', c.id] }), :include_blank => true, :required => false, :size => 60, :title => l(:label_province) %></p>
   <hr>
   <% if @conv.new_record? %>
       <h4><%= @conv.name %></h4>
@@ -43,7 +43,7 @@
 
   <p><%= f.text_field :indirizzo, :label => :field_indirizzo, :size => 50 %></p>
 
-  <p><%= f.select :comune_id, (Comune.all.collect { |c| [c.name, c.id] }), :include_blank => false, :required => true, :size => 60, :title => l(:label_comune) %></p>
+  <p><%= f.select :comune_id, (Comune.all( :include => [[ :province => :region ]], :order => 'name').collect { |c| [c.name, c.id] }), :include_blank => true, :required => false, :size => 60, :title => l(:label_comune) %></p>
 
   <p><%= f.text_field :email, :label => :field_email, :required => true, :size => 20 %></p>
 
